# PhantomSDR-Plus

./: RADE_test_concurrent_listeners.txt  README.md  admin_server.py  config-airspyhf.toml  config-rsp1a.toml  config-rtl.toml  config-rx888mk2.toml  config-rx888mk2_hf.toml  config.example.hackrf.toml  config.example.rtlsdr.toml  config.toml  connection_impl.hpp  fftw_wisdom  fix_local_geo.py  install-Deb12.sh  install-stats-server.sh  install.sh  install_arc.sh  install_arch.sh  install_fedora.sh  install_opensuse.sh  install_opensusse.sh  install_rade.sh  install_rade_ubuntu22.sh  instractions-for-airspy  instructions-for-rsp1a  manage_admin.sh  markers.json  meson.build  meson_options.txt  phantomsdr-admin.service  proxy.py  rade.sh  rade_helper.py  rade_loadtest.csv  rade_loadtest.py  recompile  recompile.sh  request.hpp  setup_admin.sh  (+6 more)
autorun/: audiotap.js  bandplan.js  decodeworker.js  index.js  manager.js  pool.js  probe-ft8.js  pskreporter.js  spotparse.js  wasm-shim.js  wsprnet.js
docs/: ADMIN_PANEL_SETUP.md  COMPLETE_FIX_SUMMARY.md  DECODERS.md  INSTALLATION.md  PROJECT_STRUCTURE.md  RADE_General_INSTALL_MANUAL_LINUX.md  RADE_Pi_INSTALL_MANUAL.md  RADE_README.md  README.md  USER_GUIDE.md
docs/sdr-stats/: README.md  install-stats-server.sh  package.json  system-stats-server.js
frequencylist/: 0.TXT  A26all00.TXT  README.md  broadcas.txt  curl-output.txt  currentUpdateFile.txt  fmorg.txt  generate-current-shortwave.py  generateshortwave.py  mymarkers.json  shortwavestations.json  site.txt  update-markers.sh
frontend/: build-all.sh  build-analog.sh  build-default.sh  build-digital.sh  build-v2-analog.sh  build-v2-digital.sh  debug-title.sh  fix-title-python.py  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  site_information.json  stats.html  switch-version.sh  vite.config.js
frontend/public/: analyze_users.py  stats.html  users.html  wf-message.json
frontend/public/decoders/: ft8_lib.wasm
frontend/src/: App (analog_smeter).svelte  App (digital_smeter).svelte  App (v2_analog_smeter).svelte  App (v2_digital_smeter).svelte  App.svelte  App__analog_smeter_.svelte  App__digital_smeter_.svelte  App__v2_analog_smeter_.svelte  App__v2_digital_smeter_.svelte  audio-stream-worklet.js  audio.js  bands-config.js  cwDecoder.js  decoder.worker.js  eventBus.js  events.js  main.js  sstv.js  videoRecorder.js  waterfall.js
frontend/src/assets/: shortwavestations.json
frontend/src/lib/: CheckButton.svelte  FreeDVReporter.svelte  FrequencyInput.svelte  FrequencyMarkers.svelte  FtxSpectrum.svelte  Logger.svelte  MagicEyeIndicator.svelte  PassbandTuner.svelte  Popover.svelte  Spectrogram.svelte  Tooltip.svelte  VersionSelector.svelte  VersionSelector.svelte.backup  VideoAreaSelector.svelte  backend.js  colormaps.js  fftRadix2.js  freedv-reporter.js  hammeractions.js  opusMlDecoder.js  wrappers.js
frontend/src/modules/: ft4.js  package.json  wspr.js
jsdsp/: extract_EXPORTED_FUNCTIONS.js  ft4_wasm_glue.c
jsdsp/ft8_wasm/: README.md  build_ft8_wasm.sh  wasm_wrapper.c
src/: CHANGES.md  README.md  audio.cpp  audio.h  chat.cpp  chat.h  client.cpp  client.h  crash_handler.cpp  crash_handler.h  events.cpp  fft.cpp  fft.h  fft_cuda.cu  fft_impl.cpp  fft_mkl.cpp  http.cpp  samplereader.cpp  signal.cpp  signal.h  spectrumserver.cpp  spectrumserver.h  waterfall.cpp  waterfall.h  websocket.cpp  websocket.h
src/listing/: software_info.cpp  software_info.h
src/utils/: audioprocessing.cpp  audioprocessing.h  dsp.cpp  dsp.h
subprojects/: glaze.wrap
